--- a/css/pagina_principal.css
+++ b/css/pagina_principal.css
@@ -1,3 +1,6 @@
+body{
+    background-color: rgb(236, 244, 252);
+}
 #filtros > a > img{
     width: 230px;
 }
@@ -10,7 +13,7 @@ section > img{
 
 #postar{
     text-align: center;
-    background-color: brown;
+    background-color: rgb(207, 212, 214);
     border-radius: 8px;
 }
 #postar > textarea{
@@ -18,25 +21,86 @@ section > img{
     padding: 10px;
     margin-top: 16px;
     border-radius: 10px;
+    width: 600px;
 }
 section{
-    background-color: rgb(68, 68, 68);
+    background-color: rgb(207, 212, 214);
     margin: auto;
     border-radius: 8px;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 15px;
 }
 #principal{
     max-width: 700px;
-    margin: 0 40px;
+    margin: 85px 40px 0 330px;
 }
-.lateral{
-    height: 1000px;
-    width: 400px;
-    background-color: blue;
-}
+
 main{
     margin-top: 15px;
     display: flex;
-    align-items: justify;
+    justify-content: space-between;
+}
+
+/* ============= Parte do anuncios ============= */
+.lateral{
+    height: 1000px;
+    max-width: 300px;
+    padding: 20px;
+    /* background-color: blue; */
+}
+
+.anuncio img {
+    display: block;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.lateral.esquerda {
+    position: fixed;
+    top: 85px;
+    left: 0px;
+}
+
+.lateral.direita {
+    position: fixed;
+    top: 85px;
+    right: 0px;
+}
+
+/* =========== responsivo ============ */
+@media (max-width: 1120px) {
+    .lateral.direita {
+        display: none;
+    }
+}
+
+@media (max-width: 968px) {
+    .lateral.esquerda {
+        width: 250px;
+        margin-bottom: 20px;
+    }
+    #pricipal {
+        margin-left: 200px;
+        max-width: 400px;
+        background-color: red;
+    }
+}
+
+@media (max-width: 730px) {
+    .lateral.esquerda {
+        display: none;
+    }
+    #principal {
+        margin: 180px auto;
+        padding: 0 10px;
+        background-color: blue;
+    }
+    #principal .post {
+        width: 400px;
+        background-color: red;
+    }
+    #principal .post .img-post img {
+        display: block;
+        width: 100%;
+    }
 }
