--- a/css/pagina_principal.css
+++ b/css/pagina_principal.css
@@ -10,7 +10,9 @@ section > p > img{
 section > img{
     width: 35px;
 }
-
+#postar a{
+    text-decoration: none;
+}
 #postar{
     text-align: center;
     background-color: rgb(207, 212, 214);
